--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="./public/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +18,7 @@
   <body>
     <div class="form__area">
       <header>
-        <img class="logo" src="./assets/images/logo.svg" alt="Lets.camp" />
+        <img class="logo" src="./assets/img/logo.svg" alt="Lets.camp" />
       </header>
 
       <main>
@@ -62,7 +63,7 @@
       </main>
     </div>
     <aside class="image__area">
-      <img src="./assets/images/side-image.png" alt="A tent near a lake" />
+      <img src="./assets/img/side-image.png" alt="A tent near a lake" />
     </aside>
     <script>
       feather.replace();
